מדו, האנטומיה של גריי, ארוחת ראש השנה

--- a/index.html
+++ b/index.html
@@ -347,6 +347,8 @@ Error message and password prompt
 
 <li>ארוחת כריסמס</li>
 
+<li>ארוחת ראש השנה</li>
+
 <li>ארנון חן</li>
 
 <li>אשת העסקים</li>
@@ -448,6 +450,8 @@ Error message and password prompt
 <li>האחיות K</li>
 
 <li>האחיות כהן</li>
+
+<li>האנטומיה של גריי</li>
 
 <li>האסיפה הראשונה</li>
 
@@ -618,6 +622,8 @@ Error message and password prompt
 <li>מאכילים את המצפון</li>
 
 <li>מג'דרה</li>
+
+<li>מדו</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
 
@@ -8710,10 +8716,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20170924204740244" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20170926194532716" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20170924204742757" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170926194536156" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8722,7 +8728,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מרק עם קניידלך]] [[דייויד צ'ייס]] [[איילה מלאך פיינס]] [[טוני סופרנו]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האנטומיה של גריי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8742,7 +8748,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170924173321122" title="$:/temp/search">
+<div created="20161023184814872" modified="20171002200215793" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9886,6 +9892,13 @@ well,
 
 </pre>
 </div>
+<div created="20170926171537258" modified="20170926174548337" tags="[[חיות אוכל]] [[קופים ממונעים]]" title="ארוחת ראש השנה">
+<pre>[img[pictures/aruchat-rosh-hashana.jpg]]
+
+!!![[יויו]]:
+
+ראש השנה התשע&quot;ח היה משהו</pre>
+</div>
 <div created="20170729122045070" modified="20170729204444850" tags="[[אירי טוענת]]" title="ארנון חן">
 <pre>[img[pictures/arnon-chen.jpg]]
 
@@ -9945,7 +9958,7 @@ well,
 
 דןדן</pre>
 </div>
-<div created="20170425194155286" modified="20170817163415339" tags="[[קופים ממונעים]]" title="בחוות החיות">
+<div created="20170425194155286" modified="20170929100621282" tags="[[קופים ממונעים]]" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
@@ -10877,7 +10890,7 @@ Is where I want to be
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170829174937405" modified="20170924161926340" tags="[[אחיות חוץ]] הסופרנוס" title="דייויד צ'ייס">
+<div created="20170829174937405" modified="20171002143301771" tags="[[אחיות חוץ]] הסופרנוס" title="דייויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -10892,6 +10905,8 @@ different tastes, but there were things we both love: family, work, people in al
 @@
 
 וכן, כולנו נדבקנו, תודות [[לאנג'ליק|אנג'ליק]], ובאיחור של כמה שנים, בחיידק הסופרנוס. [[גורה]] מידי כמה ימים מנסה שוב לצייר את פניו, (כמו שהיא מנסה לצייר שוב עוד פנים). היא עדיין לא באמת מצליחה, אבל: &quot;לפחות שיראו כמה הוא טוב לב וחכם וחייכן מבפנים. שיראו את שרירי החיוך המפותחים שלו&quot;, היא אומרת. רק לאחרונה הבנתי, [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]]. תמיד הרגשתי בבית [[בסיסלי, אלסקה|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]]. בסופרנוס, לבי יצא אליו, ואני אוהבת אותו [[כאחות|האחיות כהן]]
+
+ אני ממליץ על [[ראיון|https://www.youtube.com/watch?v=_7jgaAfWS64]] מרתק, בעיני, בו [[פיטר בוגדנוביץ'|http://www.imdb.com/name/nm0000953/]], שהיה [[הפסיכולוג|http://www.imdb.com/character/ch0050337/?ref_=ttfc_fc_cl_t39]] של [[הפסיכולוגית|http://www.imdb.com/character/ch0011335/?ref_=ttfc_fc_cl_t2]] של [[טוני סופרנו]], הוא המראיין.
 
 </pre>
 </div>
@@ -11039,6 +11054,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 </pre>
+</div>
+<div created="20171002200359738" modified="20171003001946792" tags="סדרות" title="האנטומיה של גריי">
+<pre>
+[img[pictures/greys-anatomy.jpg]]
+
+!!![[יויו]]:
+
+[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, אחרי לילה סוער ומסעיר, עם מי שמתברר אחר כך ,[[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת לרגש.</pre>
 </div>
 <div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
@@ -11414,12 +11437,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170923082302700" modified="20170924205015111" tags="הסופרנוס" title="הסוף נשאר פתוח">
+<div created="20170923082302700" modified="20170926191720786" tags="הסופרנוס" title="הסוף נשאר פתוח">
 <pre>[img[pictures/sof-hasopranos.jpg]]
 
 !!![[אנג'ליק]]:
 
-במהלך השבועיים שלושה האחרונים, כל עולמי היה הסופרנוס, שבאו לי בזמן מתאים. המחשבות לא הפסיקו. טוני, אימו, אשתו, מדו, איי ג'יי, אנקל ג'וניור, אביו, הקולגות שלו, אחותו. הסדרה נגעה בי בכל רמה ומישור. אימא רעה, אהבה, פחד, סרטים, אוכל, נאמנות, משפחה, משפחה כגוף פוליטי, מיניות, אלימות, שוויוניות, יושר. [[הסוף נשאר פתוח|https://www.youtube.com/watch?v=rnT7nYbCSvM]]. אולי טוני חייב למות, כי מה? עדיף שישב בכלא בשארית חייו, ויחזור בתשובה? עדיף שיישאר עם [[פולי|http://www.imdb.com/name/nm0802831/?ref_=ttfc_fc_cl_t7]]?
+במהלך השבועיים שלושה האחרונים, כל עולמי היה הסופרנוס, שבאו לי בזמן מתאים. המחשבות לא הפסיקו. טוני, אימו, אשתו, [[מדו]], איי ג'יי, אנקל ג'וניור, אביו, הקולגות שלו, אחותו. הסדרה נגעה בי בכל רמה ומישור. אימא רעה, אהבה, פחד, סרטים, אוכל, נאמנות, משפחה, משפחה כגוף פוליטי, מיניות, אלימות, שוויוניות, יושר. [[הסוף נשאר פתוח|https://www.youtube.com/watch?v=rnT7nYbCSvM]]. אולי טוני חייב למות, כי מה? עדיף שישב בכלא בשארית חייו, ויחזור בתשובה? עדיף שיישאר עם [[פולי|http://www.imdb.com/name/nm0802831/?ref_=ttfc_fc_cl_t7]]?
 
 אולי - גם אם הוא מת, [[הוא מת מואר|https://www.youtube.com/watch?v=bwzDxp2TC7I]] בחייק משפחתו הנפלאה. אולי הוא יוכל לעבוד בחסות המאפיונרים האמיתיים - רשויות החוק, והם יחלקו איסלמופוביה? או פשוט קסנופוביה? שכן, ראינו את מדו רצה לכוון דלת המסעדה אחרי שהחנתה סוף סוף, ואת טוני מפעיל את הג'וקבוקס, מביט לדלת - ומסך שחור. גם אם הוא נורה, לא בטוח שזה היה כשהם אכלו את טבעות הבצל, למרות שמבטו האחרון בסדרה לא היה מחייך.
 
@@ -12290,6 +12313,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20170926191733045" modified="20171002140653886" tags="הסופרנוס" title="מדו">
+<pre>[img[pictures/meadow-soprano.jpg]]
+
+!!![[אנג'ליק]]:
+
+[[מדו סופרנו|http://www.imdb.com/name/nm0797464/]] המתוקה, היפה, הילדה הטובה, הרגישה, האיכפתית. חתכו את הסידרה בזמן, אחרת, מסכנה, הייתה צריכה להתמודד עם [[שאלות קשות|https://www.youtube.com/watch?v=cCDLz2Wabgg]].</pre>
+</div>
 <div created="20161114202954459" modified="20170514231925732" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
@@ -12728,12 +12758,20 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
-<div created="20170914191116661" modified="20170918200704364" tags="[[מטא בדיון]]" title="נשמה">
+<div created="20170914191116661" modified="20170929160425052" tags="[[מטא בדיון]]" title="נשמה">
 <pre>[img[pictures/neshama.jpg]]
 
-!!![[יויו]]:
+!!![[נשמה]]:
 
-נשמה - soul, נפטרה  לפני כמה שנים, וביקשה לא להיוולד בינתיים. היא מחכה לימים של אחרי מלחמת העולם הבאה. בקשתה של נשמה אושרה, ובינתיים היא מסייעת לנשמות שלא רוצות לבוא שוב לעולם הזה, למצוא מקום מיטבי להיוולד בו. כמו כן היא משמשת, כמלאך שומר מחליף.
+נפטרתי  לפני  מספר שנים, ולאחר מותי הבנתי, שלעת עתה, זהו מרחב המחייה של נשמתי. לא אוכל להגביה עוף אל מחוזות המקור שלי, ואף אצטרך להיוולד שוב בארץ. 
+
+הייתה לי אפשרות בחירה מסויימת, וביקשתי להיוולד רק אחרי שתסתיים מלחמת העולם הבאה. בקשתי אושרה, ובינתיים אני מסייעת לנשמות שלא רוצות לבוא שוב לעולם הזה, למצוא מקום מיטבי להיוולד בו. כמו כן אני משמשת, כמלאך שומר מחליף מסוג רפאל.
+
+בגלגול האחרון שלי הייתי מטפלת, וזו הנטייה הטבעית שלי. היה לי גלגול נהדר ומלא בכל טוב. הורים נהדרים, משפחה אוהבת, ילדים נפלאים, אהבת גבר, הצלחה מקצועית. הייתי נורא &quot;בסדרית&quot;. דבר אחד לא היה שם ממש - שחרור. אחזתי, שמרתי. הייתי זהירה ומדודה. היה לי קל, כי האמנתי במעשי והייתי חרוצה מאד. בשל אלה, התיקון הבא שלי הוא שחרור ואמונה - וזה גלגול לא פשוט, אך משחרר.
+
+
+
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[נשמה]]&quot;&gt;&gt;
@@ -12750,12 +12788,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170711173812724" modified="20170712082932518" tags="" title="סדרות">
+<div created="20170711173812724" modified="20171002232210293" tags="" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
 
 !!![[יויו]]:
 
-מגיע רגע בו לנרט, השמאן האינדיאני האזורי ב&quot;חשיפה לצפון&quot;, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה חבל&quot;ז שוכ&quot;ו ק&quot;ר.
+לאחר חיפושים, מגיע רגע בו לנרט, השמאן האינדיאני האזורי ב&quot;חשיפה לצפון&quot;, מבין ש&quot;הסיפור המרפא&quot; של האדם הלבן הוא הקולנוע. על פי ההגיון הזה, סדרות זה בריא, וצפיית בינג' זה חבל&quot;ז שוכ&quot;ו ק&quot;ר, שלא לדבר על זה שאחרי 12 עונות של [[האנטומיה של גריי]] אני כשיר להיות רופא מנתח.
 
 
 &lt;&lt;list-links filter:&quot;[tag[סדרות]]&quot;&gt;&gt;
