--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>imagine</li>
 
+<li>jazz</li>
+
 <li>less is more</li>
 
 <li>logo-bg</li>
@@ -258,6 +260,8 @@ Error message and password prompt
 <li>RTLStylesheet</li>
 
 <li>אבא יואל</li>
+
+<li>אבקות</li>
 
 <li>אהבה</li>
 
@@ -8728,7 +8732,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האנטומיה של גריי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="אבקות jazz [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8941,6 +8945,12 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
+<div created="20171004154734427" modified="20171004155430808" tags="[[אחיות חוץ]]" title="jazz">
+<pre>
+[img[pictures/jazz.jpg]]
+
+[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא [[אהבה|https://www.youtube.com/user/yasminosh100]].</pre>
+</div>
 <div created="20170624105324019" modified="20170706174455610" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
@@ -9025,6 +9035,20 @@ well,
 הוא השתדל כפי יכולתו לגדל [[אותנו|משפחת באומן]] כאנשים טובים, וברוב המקרים הוא אפילו הצליח.
 
 
+
+</pre>
+</div>
+<div created="20171003162348923" modified="20171005113200497" tags="[[חיות אוכל]] [[חלומות שחלמנו]]" title="אבקות">
+<pre>[img[pictures/avkot.jpg]]
+
+!!![[יויו]]:
+
+אבקות הן אין אין מצב מכל כך הרבה סיבות. ראשית הן מעליבות את האינטליגנציה של בלוטות הטעם. שנית - אני סבור כי הן מפעילות אזעקות שווא אצל הקטליזטורים, בעוד לאלה אין מה באמת לפרק. שלישית הן מפוצצות מלחים, מינרלים, פוספטים, מלט וגור חתולים שהסתבך בשערו.
+
+למרות שאבקות הן אין אין מצב, אני משתמש באבקות פה ושם אבל רק כדי הצורך פחות רבע. למשל אבקת אפייה, אם תתחילו לחשוב על זה תראו שהלשון שלכם יכולה להבחין בטעמה. אם מבחינים בטעמה, סימן שיש יותר מידי. למשל אבקת סוכר. למשל אבקת פודינג - אשתמש רק בחצי ממה שכתוב. בממתיקים מלאכותיים, אני לא נוגע. אבקות מרק - לא נוגע. אבקת חלב - לא נוגע. אבקת קקאו - נוגע. אבקת שקדים - נוגע. אבקת חיטה - נוגע. 
+
+
+אבקת ביצים? אם במקרה נפלה לכם ביצה, תנו לה להתייבש, תנו לחתול לגרד את מה שיש, וממה  שנשאר תכינו עוגת שיש.
 
 </pre>
 </div>
@@ -11056,8 +11080,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20171002200359738" modified="20171003001946792" tags="סדרות" title="האנטומיה של גריי">
-<pre>
-[img[pictures/greys-anatomy.jpg]]
+<pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
 
@@ -12630,12 +12653,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170924155536957" modified="20170924210919357" tags="[[חיות אוכל]]" title="מרק עם קניידלך">
+<div created="20170924155536957" modified="20171003162330610" tags="[[חיות אוכל]]" title="מרק עם קניידלך">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 !!![[יויו]]:
 
-בעוד כשלושה שבועות, תיפתח [[&quot;שה ז'נבייב&quot;|הקוסקוס]] במהדורתה החדשה - מעדניית [[סלואו פוד|https://www.slowfood.com/]] עם השפעות של המטבח הקליפורני. אחד הדברים שהדבר אומר הוא, שחומרי הגלם יהיו מוקפדים אף יותר ומאד טעימים, ולכן אין צורך בדברים כמו אבקת מרק. בינתיים אירי ואני מתאמנים ואלפרד עוזר, והזמנו את [[האחיות|האחיות כהן]] לארוחת ראש השנה כוהנית.
+בעוד כשלושה שבועות, תיפתח [[&quot;שה ז'נבייב&quot;|הקוסקוס]] במהדורתה החדשה - מעדניית [[סלואו פוד|https://www.slowfood.com/]] עם השפעות של המטבח הקליפורני. אחד הדברים שהדבר אומר הוא, שחומרי הגלם יהיו מוקפדים אף יותר ומאד טעימים, ולכן אין צורך בדברים כמו [[אבקת מרק|אבקות]]. בינתיים אירי ואני מתאמנים ואלפרד עוזר, והזמנו את האחיות [[לארוחת ראש השנה|ארוחת ראש השנה]] כוהנית.
 
 המרק:
 
