--- a/index.html
+++ b/index.html
@@ -8732,7 +8732,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אבקות jazz [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסוף נשאר פתוח]] [[דייויד צ'ייס]] [[טוני סופרנו]] הסופרנוס [[כריסטופר מולטיסנטי]] [[האנטומיה של גריי]] jazz [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8945,11 +8945,10 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20171004154734427" modified="20171004155430808" tags="[[אחיות חוץ]]" title="jazz">
-<pre>
-[img[pictures/jazz.jpg]]
+<div created="20171004154734427" modified="20171005185553038" tags="[[אחיות חוץ]]" title="jazz">
+<pre>[img[pictures/jazz.jpg]]
 
-[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא [[אהבה|https://www.youtube.com/user/yasminosh100]].</pre>
+[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא [[אהבה|https://2017.indnegev.website/artists/84.html]].</pre>
 </div>
 <div created="20170624105324019" modified="20170706174455610" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
@@ -11079,12 +11078,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20171002200359738" modified="20171003001946792" tags="סדרות" title="האנטומיה של גריי">
+<div created="20171002200359738" modified="20171005174802325" tags="סדרות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
 
-[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, אחרי לילה סוער ומסעיר, עם מי שמתברר אחר כך ,[[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת לרגש.</pre>
+[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, אחרי לילה סוער ומסעיר, עם מי שמתברר אחר כך ,[[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך. השיחות האינטימיות ביותר קורות מעל פציינטים עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת לרגש.</pre>
 </div>
 <div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
