--- a/index.html
+++ b/index.html
@@ -463,6 +463,8 @@ Error message and password prompt
 
 <li>הברמנית</li>
 
+<li>הגוף מתעדכן</li>
+
 <li>הגשר</li>
 
 <li>הדוד האמיתי</li>
@@ -8732,7 +8734,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האנטומיה של גריי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האנטומיה של גריי]] [[הגוף מתעדכן]] [[חיות אוכל]] [[מרק עם קניידלך]] [[האחיות כהן]] המעבדה [[חשיפה לצפון]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8752,7 +8754,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20171002200215793" title="$:/temp/search">
+<div created="20161023184814872" modified="20171007190241251" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11078,12 +11080,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20171002200359738" modified="20171005192447557" tags="סדרות" title="האנטומיה של גריי">
+<div created="20171002200359738" modified="20171007191545156" tags="סדרות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
 
-[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת לרגש.</pre>
+
+כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|http://www.imdb.com/character/ch0021688/?ref_=ttfc_fc_cl_t41]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
+[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 במשך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
 <div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
@@ -11121,6 +11125,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 תחביבים: [[שואה]], כדורגל, פתרונות סופיים, וכלי רכב בכלל עם עדיפות לארבע על ארבע.
 
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)</pre>
+</div>
+<div created="20171005203600150" modified="20171007185846104" tags="[[אירי טוענת]]" title="הגוף מתעדכן">
+<pre>[img[pictures/haguf-mitadken.jpg]]
+
+כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן
+
+הגוף הוא חכם, ואפשר לשפר את היכולות והחושים כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה.
+אפשר ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[חיית אוכל|חיות אוכל]]</pre>
 </div>
 <div created="20170713130412612" modified="20170713183856532" tags="סדרות" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
