--- a/index.html
+++ b/index.html
@@ -8734,7 +8734,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האנטומיה של גריי]] [[הגוף מתעדכן]] [[חיות אוכל]] [[מרק עם קניידלך]] [[האחיות כהן]] המעבדה [[חשיפה לצפון]]" title="$:/StoryList">
+<div list="[[ארוחת ראש השנה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8754,7 +8754,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20171007190241251" title="$:/temp/search">
+<div created="20161023184814872" modified="20171009135927332" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8947,10 +8947,10 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20171004154734427" modified="20171005185553038" tags="[[אחיות חוץ]]" title="jazz">
+<div created="20171004154734427" modified="20171008151424439" tags="[[אחיות חוץ]]" title="jazz">
 <pre>[img[pictures/jazz.jpg]]
 
-[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא [[אהבה|https://2017.indnegev.website/artists/84.html]].</pre>
+[[jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] היא [[יסמין לסלרוט|https://www.youtube.com/watch?v=DUX9yPz-kvo]], והיא [[הכי שיש|https://www.youtube.com/watch?v=7p9f8fK1VHA&amp;feature=youtu.be]] ושאפשר [[אהבה|https://2017.indnegev.website/artists/84.html]].</pre>
 </div>
 <div created="20170624105324019" modified="20170706174455610" tags="[[המטבח על פי ז'נבייב]]" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
@@ -9917,12 +9917,12 @@ well,
 
 </pre>
 </div>
-<div created="20170926171537258" modified="20170926174548337" tags="[[חיות אוכל]] [[קופים ממונעים]]" title="ארוחת ראש השנה">
+<div created="20170926171537258" modified="20171014131833032" tags="[[חיות אוכל]] [[קופים ממונעים]]" title="ארוחת ראש השנה">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
 !!![[יויו]]:
 
-ראש השנה התשע&quot;ח היה משהו</pre>
+ראש השנה התשע&quot;ח היה משהו. כלומר, שבסופו של דבר היה מעולה. גם ההתחלה הייתה אחלה. אבל באמצע, גורה לקתה במרמרת מסויימת. היין שהיא שתתה לא עשה טוב בעניין הזה. ז'נבייב ורוז'ה דיברו על המעדנייה שעומדת להיפתח במקום [[הקוסקוס]]. השניים משוחחים בנחת על חשיבות מקור חומרי הגלם, כי בעצם ז'נבייב רוצה &quot;לעלות כיתה&quot; מהבחינה הזו. בקיצור, גורה נתנה נאום גועלי על &quot;כמה שכולכם נהייתם לי פיינשמעקרים&quot;. היא גם הסתלבטה על אירי ועלי [[והקניידלך|מרק עם קניידלך]]. &quot;כמה תרחיקו לכת? עד לאן תרוצו כדי להשיג סלק בן יומו או סרטן עם טעם של פעם? היא צרחה, קמה והלכה לחדרה. כעבור שעתיים - כשרובינו צופים [[בפרק האחרון|הסוף נשאר פתוח]] של הסופרנוס. מבסוטים על עצמינו. מבושמים מאוכל, שתייה, פינוקים [[והסידרה הסופנית|הסופרנוס]] היא הופיע מביטה בנו. חייכנו אליה כולנו, היא התיישבה בין אווה ופיליפ. היה נפלא א-לה-דובונאז'.</pre>
 </div>
 <div created="20170729122045070" modified="20170729204444850" tags="[[אירי טוענת]]" title="ארנון חן">
 <pre>[img[pictures/arnon-chen.jpg]]
@@ -10915,7 +10915,7 @@ Is where I want to be
 
 דיור מוגז [[שבמצפה ראשית|מצפה ראשית]], הוא הפנינה, שהגיעה תודות לצינור של [[אסדת טתיס|ים טתיס]].</pre>
 </div>
-<div created="20170829174937405" modified="20171002143301771" tags="[[אחיות חוץ]] הסופרנוס" title="דייויד צ'ייס">
+<div created="20170829174937405" modified="20171014131611114" tags="[[אחיות חוץ]] הסופרנוס" title="דייויד צ'ייס">
 <pre>[img[pictures/david-chase.jpg]]
 
 !!![[יויו]]:
@@ -10929,7 +10929,7 @@ Is where I want to be
 different tastes, but there were things we both love: family, work, people in all their imperfection, food, alcohol, talking, rage and a desire to bring the whole structure crashing down.
 @@
 
-וכן, כולנו נדבקנו, תודות [[לאנג'ליק|אנג'ליק]], ובאיחור של כמה שנים, בחיידק הסופרנוס. [[גורה]] מידי כמה ימים מנסה שוב לצייר את פניו, (כמו שהיא מנסה לצייר שוב עוד פנים). היא עדיין לא באמת מצליחה, אבל: &quot;לפחות שיראו כמה הוא טוב לב וחכם וחייכן מבפנים. שיראו את שרירי החיוך המפותחים שלו&quot;, היא אומרת. רק לאחרונה הבנתי, [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]]. תמיד הרגשתי בבית [[בסיסלי, אלסקה|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]]. בסופרנוס, לבי יצא אליו, ואני אוהבת אותו [[כאחות|האחיות כהן]]
+וכן, תודות [[לאנג'ליק|אנג'ליק]], כולנו נדבקנו,  ובאיחור של כמה שנים טובות, בחיידק הסופרנוס. [[גורה]] מידי כמה ימים מנסה שוב לצייר את פניו, (כמו שהיא מנסה לצייר שוב עוד פנים). היא עדיין לא באמת מצליחה, אבל: &quot;לפחות שיראו כמה הוא טוב לב וחכם וחייכן מבפנים. שיראו את שרירי החיוך המפותחים שלו&quot;, היא אומרת. רק לאחרונה הבנתי, [[שדייויד צ'ייס|http://www.imdb.com/name/nm0153740/]], שיצר את [[הסופרנוס]], הוא אותו דייויד צ'ייס של [[חשיפה לצפון|חשיפה לצפון]]. תמיד הרגשתי בבית [[בסיסלי, אלסקה|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]]. בסופרנוס, לבי יצא אליו, ואני אוהבת אותו [[כאחות|האחיות כהן]]
 
  אני ממליץ על [[ראיון|https://www.youtube.com/watch?v=_7jgaAfWS64]] מרתק, בעיני, בו [[פיטר בוגדנוביץ'|http://www.imdb.com/name/nm0000953/]], שהיה [[הפסיכולוג|http://www.imdb.com/character/ch0050337/?ref_=ttfc_fc_cl_t39]] של [[הפסיכולוגית|http://www.imdb.com/character/ch0011335/?ref_=ttfc_fc_cl_t2]] של [[טוני סופרנו]], הוא המראיין.
 
@@ -11126,20 +11126,19 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)</pre>
 </div>
-<div created="20171005203600150" modified="20171007185846104" tags="[[אירי טוענת]]" title="הגוף מתעדכן">
+<div created="20171005203600150" modified="20171013162125680" tags="[[אירי טוענת]]" title="הגוף מתעדכן">
 <pre>[img[pictures/haguf-mitadken.jpg]]
 
-כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן
+!!![[אירי]]:
 
-הגוף הוא חכם, ואפשר לשפר את היכולות והחושים כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה.
-אפשר ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[חיית אוכל|חיות אוכל]]</pre>
+כשהייתי בת 11 לקחתי איתי מאושרת, את המצלמה שקיבלתי מסבתי וסבי ליום ההולדת, לטיול בית ספרי [[לכרמל|https://he.wikipedia.org/wiki/%D7%94%D7%9B%D7%A8%D7%9E%D7%9C]]. בין השאר ביקרנו באתר מלא האפיל - [[נחל הקישון|https://he.wikipedia.org/wiki/%D7%A0%D7%97%D7%9C_%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. נראה היה לי יפה מרחוק [[כל הארובות|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%A9%D7%AA_%D7%94%D7%A7%D7%99%D7%A9%D7%95%D7%9F]]. מה התאכזבתי כשהתמונות הגיעו מהפיתוח וגיליתי, שלא הבנתי, שהמצלמה לא מסננת, לא מתעלמת מהגדר שעומדת בינה ובין הארובות המרהיבות, ואני כן. מכאן כבר התחלתי לשים לב, והעין התחילה ללמוד לדעת מה לא ייצטלם טוב. הגוף התעדכן. צילום, אומנם, לא הפך לתחביב שלי, אני ממשיכה להתעניין בגופינו החכם, ואפשר לשפר את היכולות והחושים שלו כל הזמן, מה שנקרא [[באלכסנדרונית|שיטת אלכסנדר]] - למידה. אפשר, למשל, ללמד את [[בלוטות הטעם|אבקות]], עד שאתה הופך [[פיינשמעקר|ארוחת ראש השנה]] כדבעי.</pre>
 </div>
-<div created="20170713130412612" modified="20170713183856532" tags="סדרות" title="הגשר">
+<div created="20170713130412612" modified="20171008153258453" tags="סדרות" title="הגשר">
 <pre>[img[pictures/hagesher.jpg]]
 
 !!![[יויו]]:
 
-אל תגיד הגשר, תגיד סאגה נורן.</pre>
+אל תגיד [[הגשר|http://www.imdb.com/title/tt1733785/]], תגיד [[סאגה נורן|http://www.imdb.com/character/ch0236307/?ref_=tt_cl_t1]].</pre>
 </div>
 <div created="20170505224151892" modified="20170709132522514" tags="[[אחיות חוץ]]" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
@@ -11184,12 +11183,12 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כי זה לא נורא אם נשפך קצת רוטב פירות יער על הבשר, אבל זה בלתי הפיך, אם הרוטב של הבשר נשפך על העוגות.</pre>
 </div>
-<div created="20170806204712419" modified="20170806224320025" tags="[[סיפורים אמיתיים]]" title="הולכת על חבל">
+<div created="20170806204712419" modified="20171009140356759" tags="[[סיפורים אמיתיים]]" title="הולכת על חבל">
 <pre>[img[pictures/holechet-al-chevel.jpg]]
 
 !!![[אנג'ליק]]:
 
-אני מאוזנת בערך כמו [[הולך על חבל|https://en.wikipedia.org/wiki/Philippe_Petit]], שמתוח בין בניינים גבוהים. כל הזמן צריכה להיות זהירה לא ליפול, לדכאון, לחוסר רצון, לכעס, לרחמים עצמיים. כשאני על הקצה של הכסף, הזעם שלי גובר. אני יכולה מרגע היקיצה בבוקר, להיזכר [[במכונה|אימא מהאגדות]] ששיגרה אותי לעולם הזה כאילו מדובר במקרה רנדומלי, ולסנן כל מיני מילים ומשפטים לעברה.
+אני מאוזנת בערך כמו [[הולך על חבל|https://en.wikipedia.org/wiki/Philippe_Petit]], שמתוח בין בניינים גבוהים. כל הזמן צריכה להיות זהירה לא ליפול, לדכאון, לחוסר רצון, לכעס, לרחמים עצמיים. כשאני על הקצה של הכסף, הזעם שלי גובר. אני יכולה מרגע היקיצה בבוקר, להיזכר [[במכונה|אימא מהאגדות]] ששיגרה אותי לעולם הזה, כאילו מדובר במקרה רנדומלי, ולסנן כל מיני מילים ומשפטים לעברה.
 
 מאז שהכרתי את [[אלפרד]] וחבורתו שהפכה גם [[לחבורתי|אחות כהן]], החיים כיף. יש לי הרבה יותר עבודה וחברים, ואם אני נתקעת, יש לי ממי לבקש.
 
