--- a/index.html
+++ b/index.html
@@ -585,6 +585,14 @@ Error message and password prompt
 
 <li>כוכב המשאלות 04</li>
 
+<li>כוכב המשאלות 05</li>
+
+<li>כוכב המשאלות 06</li>
+
+<li>כוכב המשאלות 07</li>
+
+<li>כוכב המשאלות 08</li>
+
 <li>כוכב המשאלות בעל תשע הצלעות</li>
 
 <li>כורתים עצים</li>
@@ -8742,7 +8750,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הגוף מתעדכן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כוכב המשאלות 08]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8762,7 +8770,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20171029224118619" title="$:/temp/search">
+<div created="20161023184814872" modified="20171106153434900" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12043,6 +12051,56 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20171101163232985" modified="20171102192453037" tags="[[כוכב המשאלות]]" title="כוכב המשאלות 05">
+<pre>[img[pictures/cochav-5.jpg]]
+
+תגידי אווה, למה שלא תדברי קצת ואני אקשיב? בא לי לשתוק ולשמוע אותך.
+
+מצחיק אתה. כבר הרבה שנים שאני חושבת על החלמה. לוקח הרבה זמן להחלים, הרבה מאוד אם בכלל. אולי רק בימים האלה אני מתחילה להרגיש שאוכל להיות חזקה כמו הילדה שהייתי. כל השנים האלה, בהן מצבי היה רחוק מלהיות טוב או חזק, ידעתי שזה עוד לוקח, שזה עוד ייקח, שזה משתפר אט-אט ואין מה לעשות, המסוגלות שלי מוגבלת. לא נראה לי שאי פעם מחלימים לחלוטין, לכל היותר משתפרים ולומדים להסתדר. גורה תמיד תרגיש את הפלטינה שבאגן הירכיים שלה. אני לא נפגעתי גופנית, אבל נפשית נפלתי והתרסקתי. כשהגוף נחבל זה ברור לעין, כשהנפש נחבלת זה לאו דווקא ניכר בעליל. לקח לי זמן לקלוט את גודל אי המסוגלות שלי. גם כשחשבתי שהגעתי לתחתית ו&quot;שמשם אפשר רק לעלות&quot;, כפי שאמרו לי לא פעם, ירדתי עוד. בזמן אמת לא הבנתי עד כמה, אך מתישהו כבר הבנתי שאפשר תמיד גם לרדת עוד. הנפילה כאילו הולידה אותי מחדש, אט-אט התחלתי להרים את הראש, להתהפך, לזחול, להיעמד, ללכת יד ביד עם התינוקת שאני ולארגן את עצמי מחדש. גם אני, כמו גורה, מצאתי מזור בכתיבה, אך ההתרוממות אורכת שנים רבות. עדיין מעולם לא סיפרתי לך על המשפחה הגרעינית שלי, התשתית - ותנשום עמוק כי זה לא סיפור נורמטיבי. לא שהסיפור שלך נורמטיבי, אבל תכף תתחיל להבין. הבטתי בו והמשכתי. ובכן, דמיין בעיני רוחך יויו יקירי:
+חצר ענקית שמחולקת לבתים בתים. מעין שכונה. שכונה סגורה וענקית ובה שבע חצרות ובמרכז כל אחת מהן ניצב בית גדול. 
+שבע חווילות, ביניהן גנים יפהפיים ומלאי עצים. כל בית הוא בסדר גודל של 400-300 מטרים רבועים וסביבו עשרה דונמים של חצר עבותה. לצד כל בית כזה יש גם בית לעובדים ומחסנים.
+הנחלה כולה משתרעת על שטח של כמאה וחמישים דונמים אותם סובבת שדרה רבועה מפוארת ורחבה ובערך באמצעה עובר ערוץ נחל. בצדי הדרכים והשבילים פרחו פרחים צבעוניים וציפורים צייצו. 
+היינו ואנחנו עדיין משפחה עשירה מאוד בכסף ובנכסים. את הנחלה הקיפו דונמים רבים של שדות. שדות של תירס, שדות של חיטה, שדות של ירקות, כרמים של גפנים וכרמים של זיתים, פרדסים של תפוזים ולימונים ומטעי פרות נשירים. בצד הצפוני היה דיר גדול ולידו הייתה אורווה. היה יקב ומפעל לשימורים, נגרייה ומטבח רחב ידיים ששכן במבנה גדול ועבדו בו שלוש נשים. הן היו מבשלות ואופות לכולנו אוכל משובח. אחת מהשלוש, איריס, הייתה לי כאם. צמוד למטבח היה מבנה נוסף ששימש כמעין מועדון. היו בו שולחנות נמוכים וכורסאות ושולחנות אוכל ומכונת קפה ומשחקים.
+בכל אחד מהבתים הגדולים גרו אחת משבע נשותיו של אבי וצאצאיה.
+ליתר דיוק בחמישה מהבתים גרו נשים של אבי וזאת מכיוון שאשתו הראשונה נפטרה לפני שנים רבות וגם אמי היפה נפטרה כשהייתי בת ארבע.
+היו לי עשרים ושלושה חצאי אחים ואחיות ואח אחד שלם. כלומר לאבי נולדו עשרים וחמישה בנים ובנות בסך הכול. 
+כל הילדים למדו יחד עד כיתה ח' וחולקו לקבוצות למידה לפי רמת התקדמות. את הבנים לימדו גם לעבוד בשדות, במשק החי, נפחות, חשבונאות, נגרות ועוד מיני מלאכות וכישורים, ואת הבנות גידלו להיות מתחזקות בית לעילא. למדנו לעשות כל שתעלה על הדעת, כולל עבודות יד, מוזיקה, מחול. בין ח' לי&quot;ב עברנו ללמוד בבית ספר אזורי שהיה חצי שעה נסיעה מהנחלה. 
+עד כאן הצלחת לדמיין?
+אימא'לה! אני מת!
+צחקתי בקול רם.
+</pre>
+</div>
+<div created="20171102193448202" modified="20171102194131450" tags="[[כוכב המשאלות]]" title="כוכב המשאלות 06">
+<pre>[img[pictures/cochav-6.jpg]]
+
+זה סיפור עם נוף ציורי יויו יקר שלי. אבינו דר בבית שבו התגורר כל ימי חייו, להוציא שבע שנים שבהן חי עם אשתו הראשונה בבית שלימים הפך לבית שלנו, אותו בנו לו הוריו עוד בנישואיו הראשונים. ביתנו היה הבית האהוב על אבינו. לאחר שהוריו, שהיה בנם היחיד, הלכו לעולמם, הוא חזר לבית ילדותו עם פרלה, אשתו הראשונה, לה נישא כשהיה בן 22. היו להם שלושה בנים. פרלה הייתה עקרת בית למופת. לאחר שחזר לבית הוריו ביקשה פרלה להשאיר את הבית שלהם ריק למרות שלאחר מות הוריו עמד אבינו לשאת אישה שנייה. כשהיה בן 29 נישא לנורית, ממלא אחר בקשת הוריו, שלחצו עליו לשאת אישה נוספת, לאחר שפרלה שברה את האגן שנתיים קודם, ובנה לה בית חדש. הם רצו המשכיות למשפחתם ועודדו את אבי להביא לעולם צאצאים נוספים.
+הבית שלנו היה ממוקם בפינה הצפון מערבית של החצר הענקית שמוקמה סביב הנחל. מצד אחד שלנו, במרחק די גדול, גרו נורית וארבעת בניה, ומהצד השני, מעבר לנחל, התגוררה מלכה עם שני בניה ושלוש בנותיה. בניה של נורית היו פרועים וחסרי מעצורים.
+אמי הייתה אשתו הרביעית של אבא. הוא נישא לה זמן קצר לאחר שנישא למלכה. כשילדה אותי חלתה. זו לא הייתה מחלה ממש כי אם איבוד כמות עצומה של דם לאחר הלידה בשל סיבוך ברחם. היא התגברה על איבוד הדם אך סבלה מבעיות פיזיולוגיות רבות. הייתה לי מטפלת ובהתחלה אף מינקת. גרנו יחד – אמי, אחי ואני. כשמלאו לי ארבע היא הלכה לעולמה. שמה היה חנה. אחי היה מבוגר ממני באחת עשרה שנים. הוא שמר עליי תמיד ככל יכולתו. לפעמים יצא לנסיעות וככל שבגר הלכו ורבו סמכויותיו ואחריותו גדלה. אחי היה מעין שר חוץ של המשפחה כולה. הוא זה שידע שפות זרות, הוא זה שידע לנהל שיחה עם כל אדם, הוא זה שעורר אמון וחיבה בקרב הבריות. אחי הגדול החליף הרבה מאוד נשים והיה גבר גדול ומושך. בימים בהם אחי אהרון היה בנסיעות אילץ אותי אבינו לשהות בביתה של מלכה. התנגדותי לא הועילה. 
+אני רועדת מקור יויו.
+נכנסנו והכנו עוד קפה וכוסות מים ואגוזי קשיו וצימוקים שחורים קטנים ושוטטנו והתחבקנו והסתובבנו עוד בבית – יויו מְטָווס גאה. ישבנו ליד שולחן האוכל. הבטנו זה בזה. אני רוצה שתמשיכי לספר לי, אני מרותק, הוא אמר. 
+היו עוד שלוש נשים, ליליאן, דבורה ורחל האהובה. אבא כמו עץ, המשכתי, גוו היה זקוף וחזק כגזע וקומתו גבוהה. הוא היה חכם וקל לשון אך העדיף לעסוק כמה שפחות בעסקים ובכל הכרוך בהם ואת ימיו בילה בשדות. עם הזמן ובטבעיות, ואף על פי שהיו בנים מבוגרים ממנו, הפך אחי לאיש שלו. 
+בימים שלאחר מות אמי, מלכה ונורית, האימהות השכנות, דאגו לנו. מלכה השקיעה בנו שעות רבות מזמנה וממרצה וניסתה להעביר אותנו לחזקתה. למרבה המזל אחי היה מבוגר ונחוש מספיק כדי להתנגד לדבר. הוא כבר היה בוגר מספיק כדי לדעת שמלכה חומדת את ביתנו שאבא אהב ולכן דאג להיות בעל הבית.
+אני מספרת לך את הדברים עכשיו, שנים לאחר אותם חיים באותה חצר סגורה וכמעט שלושים ושתיים שנה מאז שאני לא שם יותר. גיליתי פרצה דרכה חמקתי החוצה אל העולם הפתוח שלא באמת הכרתי במהלך 18 שנות חיי עד אז. 
+סבלתי את האימהות החורגות שלי רק מתוך כבוד לאבא, כמו שאני סובלת את האחים החורגים מתוך כבוד למשפחה, אף על פי שלא כולם בלתי ראויים. חלקם ראויים ביותר והיו אחים נהדרים ואני אוהבת כמה מהם עד מאוד. אתה יכול רק לנסות ולדמיין כמה צאצאים נוספים נולדו מתוך עשרים וחמישה אחים ואחיות...? לא מעט, זה בטוח.
+אני חושב שיש לי הרבה מאוד שאלות אלייך. אבל שאלה ראשונה ברשותך אישה יקרה... זה חוקי הדבר הזה?
+זה היה במקום אחר שהיה בזמן אחר וכן, זה היה לגיטימי למרות שזה לא היה מקובל, ואבא הלך רחוק עם הלגיטימציה, ולשמחתי זה מאחוריי והיום אני גרה במקום אחר לגמרי, שוב קרובה לאבא, שכבר מלאו לו 92, וקרובה לאהרון, שבעוד שבוע ימלאו לו 60, וקרובה לאדית – עוד חצי אחות שלי, בתה של מלכה, אשתו השלישית של אבא, והיא בת גילי, וקרוב לניקי, האחות האחת לפני הצעירה ביותר מעשרים וחמישה בניו ובנותיו של אבינו ובתה של רחל, אשתו הצעירה ביותר והנפלאה ביותר שאהבה אותי ואני אותה. עם ניקי נפגשנו באיחור מה. יום אחד אצייר לך את [[עץ המשפחה שלי|עץ המשפחה של אווה]].
+</pre>
+</div>
+<div created="20171105164236794" modified="20171105165244920" tags="[[כוכב המשאלות]]" title="כוכב המשאלות 07">
+<pre>[img[pictures/cochav-7.jpg]]
+
+זה סיפור עבות וצפוף כמו כמות עצים שמוח אחד לא יכול לדמיין בבת אחת, ולא יודעת כמה אספר לך ממנו ובטח לא עכשיו. עכשיו מה שעכשיו. אבינו לא התעסק איתנו יותר מדי, אבל מדי בוקר ברבע לשמונה היינו מתקבצים כולנו באמצע הנחלה, סמוך למקום שבו עובר הנחל ויש במה קטנה ורחבה מרוצפת וחורשת עצי מחט. אבא, שמצד אחד היה טיפוס ארטיסטי ומן הצד השני היה קשוח עד מפחיד, אסף את כולנו מדי בוקר באותה רחבה. יויו יקר שלי... אני עצמי עוד לא לגמרי יודעת איך לדבר על שמונה עשרה השנים הראשונות של חיי ולכן לא נוהגת לדבר עליהן. עוד אספר לך המון יויוקה ויש לי מספיק מה לספר גם אם לא אגיע בשלב זה לדברים שעדיין איני מסוגלת לדבר עליהם, אבל בינתיים אני רוצה לספר לך עוד דבר אחד מאותה נחלה. בבקרים באסיפה המשפחתית היה אבי עומד מולנו ועורך טקס לא ארוך, בו דבר ראשון איחל לכולנו בוקר טוב ואנחנו לו. אחריו הוא היה מנחה אותנו לנשימה נכונה משך כמה דקות. מביט לכל אחד ואחד מאיתנו לתוך העיניים. מסיים. מסתכל על כולנו ואומר: ועכשיו כל אחד מכם ילדיי היקרים יכול לבקש דבר מה אותו הוא מאחל לעצמו מכוכב המשאלות בעל תשע הצלעות. כל אחד מאיתנו דמם עם עצמו לדקה. ואז חייך אבינו חיוך גדול. הצמיד כפות ידיו זו לזו בהנאה, בירך את כולנו ליום מוצלח ופורה, ומשם המשכנו כל אחד אל משימותיו. 
+סיפור מקסים. לא נשמע אמיתי, אבל מקסים להקשיב לו. אני שומע אותך ומתרוממות לי הגבות מבפנים אווה. אני מביט בך ואני נדהם – איזה סיפור. תגידי... איפה נמצא הכוכב הזה? ותגידי... מאיפה את יודעת לאפות תגידי? ואיך ברחת בדיוק, ובדיוק ממה ומה עשית לפני שאפית? יש לי הרבה מאוד שאלות אלייך אווה... 
+כן, מובן. אתה יודע שכבר שבע? אגיד לך עכשיו בקצרה, המציאות עולה על כל דמיון. וכוכב המשאלות בעל תשע הצלעות הומצא בדמיון של אבינו היקר. אמרתי לו וחייכתי. אבא אהב לחשוב שמשם הגענו. יויו התפקע מצחוק אבל סימן לי עם היד שאמשיך לספר. המשכתי. את האפייה למדתי [[במטבח|המטבח של הנחלה]] של הבית בחצר הענקית שלנו אז-שם. אהבתי להיות במטבח ואהבתי את הנשים שעבדו ואהבתי לעבוד איתן והן לימדו אותי הרבה דברים, אבל יותר מכול אהבתי את האופה שביניהן. זו שהכינה את כל העוגות והקינוחים והעוגיות והריבות והתרכיזים והפסטה וגם בישלה. היא כבר לא בין החיים. שמה היה [[איריס]] ומכאן שמה של [[בתי היחידה|איריס הבת]]. הוא חייך. חייכנו. 
+</pre>
+</div>
+<div created="20171106141151303" modified="20171106213312474" tags="[[כוכב המשאלות]]" title="כוכב המשאלות 08">
+<pre>
+[img[pictures/cochav-8.jpg]]
+
+אני נזכרת בה כל יום כמעט [[באיריס|איריס]] ההיא. [[איריס שלי|איריס הבת]], תודה לאל, איתי. חוץ מזה... היה לי עסק שקשור, שים לב יויו שלי, לעיצוב פנים וחוץ. אבל איבדתי אותו ואחר כך המשכתי בין עבודות רבות. את אבא פגשתי שוב רק לפני חמש שנים, ולכן כפי שאתה יודע בשנה האחרונה חדלתי מלאפות בעבור שכר. לגבי אבא, הגיע רגע שנמאס לו והוא שחרר הכול. מכר את רוב מה שהיה לו, חילק את הון העתק בין כולם. הנשים שעדיין בחיים נשארו שם – גם הן קיבלו את שלהן מההון. לעצמו הוא לקח כמה שלקח וכעת כולנו גרים קרוב. כשברחתי, אבל אין לי כוח עכשיו לספר לך ממה ואיך, הגעתי מאוד במקרה לבית של זוג שהתגורר בארץ. עם סכום לא מבוטל אך לא גדול של מעות שהצלחתי לאסוף במשך כמה חודשים ברחתי הכי רחוק שהיה אפשר ואליהם הגעתי. ישבתי בבית קפה גדול שהשולחנות בו ממש קרובים זה לזה והתחלתי לאכול. הייתי בת 18. כעבור כמה דקות התיישב לידי זוג בני 60. גבר ואישה נאי סבר ומראה ולבושים יפה. זה היה בשנות השמונים. תוך כדי שאכלתי והם הזמינו לעצמם התפתחה בינינו שיחה שהובילה לכך שהם הזמינו אותי לביתם ואצלם התחלתי את חיי החדשים. גם לי היה מזל גדול יויוקה, ולכן אינני מעזה להתלונן על מה שאין לי. הגבר, ששמו היה ג'ו, היה חלוץ מחשבים, ואשתו [[נורמה|סיפורים שסיפרתי לנורמה]] הייתה אדריכלית פנים וגינות. לשניהם היה תואר דוקטור במקצועות שלהם. היו להם שני בנים גדולים שלא גרו בבית, אנדרה ופיליפ. גרתי אצלם חמש שנים. ג'ו ונורמה נדלקו עליי ולקחו אותי תחת חסותם וכפרויקט. ג'ו לימד אותי מחשבים ועם נורמה היו לי שיחות ארוכות על עיצוב. די מהר עבדתי איתה שלושה ימים בכל שבוע. בשאר הזמן התחלתי ללמד את עצמי תוכנות עיצוב וללמוד באוניברסיטה הפתוחה. תוך שלוש שנים, ובעזרת ג'ו ונורמה, התחלתי לקבל עבודות. ידעתי טוב גננות וחקלאות ולבנות דברים. זה עוד דבר שהיה לי מהנחלה. פעמיים-שלוש בשבוע הגיע נגר אומן, אדם היה שמו. אדם משכיל וחביב שסבל [[מבעיית שתייה מודחקת|ריחות]]. הוא לימד את מי מבינינו שהתעניין, אבל בעיקר בנה ותיקן כל מה שנדרש לבתים. אהבתי לעבוד בנגרייה ולהקשיב לאדם ולדבר איתו, למדתי ממנו המון. גם [[רזיאל ורפאל]], שניים משלושת בניה של פרלה, בילו שם הרבה. אז ככה שהדברים שיחקו לטובתי. למדתי והתפתחתי וקיבלתי תמיכה ואהבה, אבל יום אחד כתבתי פתק והלכתי משם בלי להביט לאחור. זה קרה כי הייתי מאוהבת קשות בבנם הצעיר פיליפ, שהיה, כשהגעתי לשם, בן 30 ולמד בלונדון. לא יכולתי להתמודד עם זה. אנדרה, בנם הבכור, היה בן 36 אז. היו להם גם שלושה כלבים ושני חתולים. משפחה מעניינת בפני עצמה. בשנים שאחר כך היינו נפגשים שלושתנו לארוחות ערב בעיר מדי כמה חודשים ולאחר שנישאתי הפסקנו להיפגש. כמה שנים אחרי שהתגרשתי פגשתי אותם במקרה באיקאה, וזו הייתה שמחה עצומה ושוב התחלנו להתראות. לפני שש וחמש שנים בהתאמה הם הלכו לעולמם. ג'ו נפטר כשהיה בן 85, ונורמה כשהייתה בת 86. היו להם חיים יפים וטובים ובעצם פיליפ היה בנה של נורמה ואנדרה היה בנו של ג'ו ולא היו להם ילדים משותפים, וכשנפגשנו הם כבר חיו יחד עשר שנים. היה להם בית גדול למדי עם גינה לא קטנה. אני גידלתי בגינה ירקות ובישלתי ואפיתי לא מתוך חובה. הם עודדו אותי כל הזמן לצאת אך ללא הועיל. הם היו אנשים נפלאים שגם הבינו את מצבי כי סיפרתי להם הרבה על עברי. שלוש שנים אחרי שהגעתי אליהם התחלתי לעבוד ולהרוויח כסף. הם לא רצו ממני דבר וחסכתי כמעט כל מה שהרווחתי. בפיליפ התאהבתי ברגע שראיתי אותו. כל כך אהבתי את הפנים שלו. אהבתי את המבט שלו. אין לי מושג מה הוא הרגיש כלפיי, אי אפשר לדעת דברים כאלה לגבי האחר, אך ללא ספק מצאתי חן בעיניו. חייכתי והסמקתי עד קצות האוזניים. יויו חייך חיוך גדול וחיבק אותי ואמר שלא ישקוט עד שאסיים את הסיפור כולו. אם הייתי פוגשת אותו עכשיו בטח הייתי מתעלפת, אמרתי. בכל אופן, היו בינינו דברים, ביני ובין פיליפ, זה קרה ארבע שנים וחצי אחרי שכבר גרתי שם, כשג'ו ונורמה נסעו לחופשה, ואני נשארתי. הוא הגיע בהפתעה ובילינו יחד ארבעה ימים משכרים ואחר כך כבר הכול נהיה בלגן, כי הייתה לו ארוסה, ואחרי שנסע בלעתי את כל הכאב בלי להראות או לדבר עליו. ג'ו ונורמה ראו אותי משתבשת... 
+</pre>
+</div>
 <div created="20161113182253178" modified="20171029223708228" tags="[[הנחלה בה גדלתי]]" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>[img[pictures/cochav-hamishalot.jpg]]
 
@@ -14505,7 +14563,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170202133543180" modified="20170809205957525" tags="[[הנחלה בה גדלתי]]" title="רזיאל ורפאל">
+<div created="20170202133543180" modified="20171105164631520" tags="[[הנחלה בה גדלתי]]" title="רזיאל ורפאל">
 <pre>[img[pictures/refaelveraziel.jpg]]
 
 !!![[אווה]]:
