--- a/index.html
+++ b/index.html
@@ -8820,7 +8820,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כוכב המשאלות 28]] [[כוכב המשאלות 17]] [[ג'ון גודמן]] [[כוכב המשאלות 15]] [[כוכב המשאלות 11]] [[כוכב המשאלות 09]] [[כוכב המשאלות 07]] [[המטבח של הנחלה]] אבקות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
